# aiseclect

./: .env.example  .gitignore  AGENTS.md  ASYNC_OPTIMIZATION_NOTE.md  COMPETITIVE_OPTIMIZATIONS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  OPTIMIZATION_PROGRESS.md  PUNCTUATION_FIX_REPORT.md  README.md  pyproject.toml  test_fixes.py  test_punctuation_manual.py
.github/workflows/: aiseclect.yml
config/: ai_classify_llm_cfg.json  content_strategy.json  heat_scorer_llm_cfg.json  sources.json  tweet_generator_llm_cfg.json  watchlist.json  xiaohongshu_generator_llm_cfg.json  xiaohongshu_style_prompt.txt
scripts/: cleanup_feishu_pending.py  local_run.sh  quality_ai_ratio.py  review_cli.py  run_loop.py  test_humanizer_effect.py  test_punctuation_fix.py  windows_task_scheduler.ps1
src/: main.py
src/collect_pipeline/: README.md  __init__.py  dag.py  dedup.py  growth_taxonomy.py  humanizer.py  llm.py  models.py  persistence.py  pipeline.py  pyproject.toml  rhythm_humanizer.py
src/collect_pipeline/examples/: demo.py
src/feishu_bitable/: README.md  __init__.py
src/feishu_bitable/client/: __init__.py  core.py
src/feishu_bitable/examples/: demo.py
src/feishu_bitable/notifier/: __init__.py  alert.py
src/graphs/: graph.py  state.py
src/tools/: agent_reach_collector.py  aihot_client.py  dedup_state.py  feedgrab_collector.py  feishu_client.py  feishu_notifier.py  github_trending.py  learnprompt_client.py  llm.py  tavily.py  tweet_writer.py
tests/: test_collect_pipeline.py  test_humanizer.py  test_image_prompt_rubric.py  test_xhs_growth.py
(+27 files in other folders)
