[project]
name = "aiseclect"
version = "0.2.0"
description = "AI 资讯采集 → 双平台推文生成（X + 小红书）"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<2",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2,<1",
    "pydantic>=2.5,<3",
    "Jinja2>=3.1,<4",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "rich>=13,<15",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
